Bootstrap working. Stylesheets removed.

--- a/dev/Tpl/src/main/webapp/index.html
+++ b/dev/Tpl/src/main/webapp/index.html
@@ -4,9 +4,17 @@
 <meta charset="ISO-8859-1">
 <title>Books App - Powered by Hexacta</title>
 
-<!-- Style sheets -->
+<!-- Style sheets anteriores
+  
 <link href="css/site.css" rel="stylesheet" type="text/css" />
 <link href="js/style.css" rel="stylesheet"	type="text/css" />
+
+-->
+
+
+<!-- Style sheets -->
+<link href="css/bootstrap.css" rel="stylesheet" type="text/css" />
+<link href="css/bootstrap-theme.css" rel="stylesheet" type="text/css" />
 <link href="css/datatables/demo_page.css" rel="stylesheet" type="text/css" />
 <link href="css/datatables/demo_table.css" rel="stylesheet" type="text/css" />
 <link href="css/datatables/demo_table_jui.css" rel="stylesheet" type="text/css" />
@@ -23,6 +31,7 @@
 <script src="js/angular-route.min.js"></script>
 <script src="js/angular-animate.min.js"></script>
 <script src="js/angular-touch.min.js"></script>
+<script src="js/bootstrap.js"></script>
 <script type="text/javascript" src="app/app.js"></script>
 <script type="text/javascript" src="app/controller/bookListCtrl.js"></script>
 <script type="text/javascript" src="app/controller/createBookCtrl.js"></script>
