--- a/dev/Tpl/src/main/webapp/index.html
+++ b/dev/Tpl/src/main/webapp/index.html
@@ -57,6 +57,11 @@
 
 </head>
 <body>
+	<div class="page-header"> 
+		<h2>Hexacta E-Bookstore 
+			<small>The most amazing bookstore in the world</small> 
+		</h2> 
+	</div>
 	<div ng-view></div>
 </body>
 </html>
