--- a/dev/Tpl/src/main/webapp/index.html
+++ b/dev/Tpl/src/main/webapp/index.html
@@ -56,11 +56,12 @@
 <!-- End Javascript -->
 
 </head>
-<body>
-	<div class="page-header"> 
+<body class="container">
+	<div class="col-md-12"> 
 		<h2>Hexacta E-Bookstore 
 			<small>The most amazing bookstore in the world</small> 
 		</h2> 
+		<hr />
 	</div>
 	<div ng-view></div>
 </body>
