--- a/dev/Tpl/src/main/webapp/index.html
+++ b/dev/Tpl/src/main/webapp/index.html
@@ -4,11 +4,8 @@
 <meta charset="ISO-8859-1">
 <title>Books App - Powered by Hexacta</title>
 
-<!-- Style sheets anteriores
-  
-<link href="css/site.css" rel="stylesheet" type="text/css" />
+<!-- Style sheet anterior
 <link href="js/style.css" rel="stylesheet"	type="text/css" />
-
 -->
 
 
@@ -21,6 +18,7 @@
 <link type="text/css" href="css/datatables/jquery.dataTables.css"	rel="stylesheet" />	
 <link type="text/css" href="css/jquery-ui.css"	rel="stylesheet" />
 <link type="text/css"	href="css/ui-lightness/jquery-ui-1.8.16.custom.css"	rel="stylesheet" />
+<link href="css/site.css" rel="stylesheet" type="text/css" />
 <!-- End Style sheets -->
 
 <!-- Javascript -->
