Commit para hacer merge

--- a/dev/Tpl/src/main/webapp/index.html
+++ b/dev/Tpl/src/main/webapp/index.html
@@ -4,11 +4,6 @@
 <meta charset="ISO-8859-1">
 <title>Books App - Powered by Hexacta</title>
 
-<!-- Style sheet anterior
-<link href="js/style.css" rel="stylesheet"	type="text/css" />
--->
-
-
 <!-- Style sheets -->
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" />
 <link href="css/bootstrap-theme.css" rel="stylesheet" type="text/css" />
@@ -55,11 +50,14 @@
 
 </head>
 <body class="container">
-	<div class="col-md-12"> 
+	<div class="col-md-8"> 
 		<h2>Hexacta E-Bookstore 
 			<small>The most amazing bookstore in the world</small> 
 		</h2> 
 		<hr />
+	</div>
+	<div class="col-md-4">
+		<p>TEST</p>
 	</div>
 	<div ng-view></div>
 </body>
