--- a/dev/Tpl/src/main/webapp/index.html
+++ b/dev/Tpl/src/main/webapp/index.html
@@ -35,6 +35,8 @@
 <script type="text/javascript" src="app/controller/createBookCtrl.js"></script>
 <script type="text/javascript" src="app/controller/editBookCtrl.js"></script>
 <script type="text/javascript" src="app/controller/lendBookCtrl.js"></script>
+<script type="text/javascript" src="app/controller/deleteBookCtrl.js"></script>
+<script type="text/javascript" src="app/controller/logInCtrl.js"></script>
 <script type="text/javascript">
 	$(function() {
 		$("#accordion").accordion({
