--- a/dev/Tpl/src/main/webapp/index.html
+++ b/dev/Tpl/src/main/webapp/index.html
@@ -90,13 +90,7 @@
 										Salir</a></li>
 							</ul></li>
 					</ul>
-					<form class="navbar-form navbar-right" role="search">
-						<div class="form-group">
-							<input type="text" class="form-control input-sm" placeholder="User" />
-							<input type="password" class="form-control input-sm" placeholder="Password" />
-						</div>
-						<button type="submit" class="btn btn-default input-sm">Entrar</button>
-					</form>
+					<user-login> </user-login>
 				</div>
 				<!-- /.navbar-collapse -->
 			</div>
