--- a/dev/Tpl/src/main/webapp/index.html
+++ b/dev/Tpl/src/main/webapp/index.html
@@ -34,32 +34,20 @@
 <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
 <script type="text/javascript" src="js/jquery-ui-1.8.16.custom.min.js"></script>
 <script src="js/bootstrap.js"></script>
+<script src="js/site.js"></script>
+<script src="js/customPopover.js"></script>
+<script type="text/javascript" src="js/ui-bootstrap-tpls-0.11.0.min.js"></script>
 <script type="text/javascript" src="app/app.js"></script>
 <script type="text/javascript" src="app/controller/bookListCtrl.js"></script>
 <script type="text/javascript" src="app/controller/createBookCtrl.js"></script>
 <script type="text/javascript" src="app/controller/editBookCtrl.js"></script>
 <script type="text/javascript" src="app/controller/lendBookCtrl.js"></script>
-<script type="text/javascript">
-	$(function() {
-		$("#accordion").accordion({
-			header : "h3"
-		});
 
-		$('#tabs').tabs();
-
-		$('#dialog_link, ul#icons li').hover(function() {
-			$(this).addClass('ui-state-hover');
-		}, function() {
-			$(this).removeClass('ui-state-hover');
-		});
-
-	});
-</script>
 <!-- End Javascript -->
 
 </head>
-<body class="">
-	<div class="col-md-12">
+<body class="contaniner">
+	<div class="col-md-12" >
 		<nav class="navbar navbar-default" role="navigation">
 			<div class="container-fluid">
 				<div class="navbar-header">
@@ -80,7 +68,8 @@
 						<li><a href="#">Otra Seccion</a></li>
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="#">Registrarse</a></li>
+						<li><a href="#" popover-append-to-body iantooltip="Hi" iantooltip-title="item.title"
+							iantooltip-placement="bottom"">Registrarse</a></li>
 						<li class="dropdown"><a href="#" class="dropdown-toggle"
 							data-toggle="dropdown"><span class="glyphicon glyphicon-user"></span><span
 								class="caret"></span></a>
@@ -102,7 +91,7 @@
 								placeholder="User"> <input type="password"
 								class="form-control input-sm" placeholder="Password">
 						</div>
-						<button type="submit" class="btn btn-default input-sm">Entrar</button>
+						<button type="submit" class="btn btn-hexacta-primary input-sm">Entrar</button>
 					</form>
 				</div>
 				<!-- /.navbar-collapse -->
@@ -114,5 +103,7 @@
 		<hr />
 	</div>
 	<div class="container" ng-view></div>
+	
 </body>
+
 </html>
