--- a/dev/Tpl/src/main/webapp/index.html
+++ b/dev/Tpl/src/main/webapp/index.html
@@ -34,6 +34,8 @@
 <script type="text/javascript" src="app/controller/createBookCtrl.js"></script>
 <script type="text/javascript" src="app/controller/editBookCtrl.js"></script>
 <script type="text/javascript" src="app/controller/lendBookCtrl.js"></script>
+<script type="text/javascript" src="app/controller/registerCtrl.js"></script>
+<script type="text/javascript" src="app/controller/deleteBookCtrl.js"></script>
 <script type="text/javascript">
 	$(function() {
 		$("#accordion").accordion({
@@ -74,12 +76,12 @@
 						<li><a href="#">Otra Seccion</a></li>
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="#">Registrarse</a></li>
-						<li class="dropdown"><a href="#" class="dropdown-toggle"
+						<li><a href="#/register">Registrarse</a></li>
+						<li class="dropdown"><a class="dropdown-toggle"
 							data-toggle="dropdown"><span class="glyphicon glyphicon-user"></span><span
 								class="caret"></span></a>
 							<ul class="dropdown-menu" role="menu">
-								<li><a href="#"><span class="glyphicon glyphicon-minus"></span>
+								<li><a href="#"><span class="glyphicon glyphicon-plus"></span>
 										Accion 1</a></li>
 								<li><a href="#"><span class="glyphicon glyphicon-minus"></span>
 										Accion 2</a></li>
