--- a/dev/Tpl/src/main/webapp/index.html
+++ b/dev/Tpl/src/main/webapp/index.html
@@ -35,9 +35,9 @@
 <script type="text/javascript" src="js/jquery-ui-1.8.16.custom.min.js"></script>
 <script src="js/bootstrap.js"></script>
 <script src="js/site.js"></script>
-<script src="js/customPopover.js"></script>
 <script type="text/javascript" src="js/ui-bootstrap-tpls-0.11.0.min.js"></script>
 <script type="text/javascript" src="app/app.js"></script>
+<script src="js/customDirectives.js"></script>
 <script type="text/javascript" src="app/controller/bookListCtrl.js"></script>
 <script type="text/javascript" src="app/controller/createBookCtrl.js"></script>
 <script type="text/javascript" src="app/controller/editBookCtrl.js"></script>
@@ -68,8 +68,7 @@
 						<li><a href="#">Otra Seccion</a></li>
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="#" popover-append-to-body iantooltip="Hi" iantooltip-title="item.title"
-							iantooltip-placement="bottom"">Registrarse</a></li>
+						<li><a href="#" custom-popover popover-attach-to-body popover-html="<register-form></register-form>" popover-placement="bottom" popover-label="Registrarse"></a></li>
 						<li class="dropdown"><a href="#" class="dropdown-toggle"
 							data-toggle="dropdown"><span class="glyphicon glyphicon-user"></span><span
 								class="caret"></span></a>
