--- a/dev/Tpl/src/main/webapp/index.html
+++ b/dev/Tpl/src/main/webapp/index.html
@@ -64,7 +64,7 @@
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="#/register">Registrarse</a></li>
-						<li class="dropdown"><a class="dropdown-toggle"
+						<li class="dropdown"><a href="#" class="dropdown-toggle"
 							data-toggle="dropdown"><span class="glyphicon glyphicon-user"></span><span
 								class="caret"></span></a>
 							<ul class="dropdown-menu" role="menu">
