Directiva cambia el nombre a userIngreso

--- a/dev/Tpl/src/main/webapp/index.html
+++ b/dev/Tpl/src/main/webapp/index.html
@@ -79,7 +79,7 @@
 										Salir</a></li>
 							</ul></li>
 					</ul>
-					<user-login> </user-login>
+					<user-ingreso> </user-ingreso>
 				</div>
 				<!-- /.navbar-collapse -->
 			</div>
