--- a/dev/Tpl/src/main/webapp/index.html
+++ b/dev/Tpl/src/main/webapp/index.html
@@ -42,8 +42,8 @@
 <!-- End Javascript -->
 
 </head>
-<body class="contaniner">
-	<div class="col-md-12">
+<body>
+	<div>
 		<nav class="navbar navbar-default" role="navigation">
 			<div class="container-fluid">
 				<div class="navbar-header">
